--- a/css/global.css
+++ b/css/global.css
@@ -60,113 +60,24 @@ a,button,input,textarea{-webkit-tap-highlight-color: rgba(0,0,0,0);}
   overflow: hidden;
 }
 
-
-
-
-
-/* 设置公用字体 */
-.fz12{font-size:12px;}
-.fz14{font-size:14px;}
-.fz16{font-size:16px;}
-.fz18{font-size: 18px;}
-.fz20{font-size: 20px;}
-
-/* 设置公用边距 */
-.pl10{padding-left: 10px}
-.pl15{padding-left: 15px}
-.pl20{padding-left: 20px}
-.pr10{padding-right: 10px}
-.pr15{padding-right: 15px}
-.pr20{padding-right: 20px}
-.pb10{padding-bottom: 10px}
-.pb15{padding-bottom: 15px}
-.pb20{padding-bottom: 20px}
-.pt10{padding-top: 10px}
-.pt15{padding-top: 15px}
-.pt20{padding-top: 20px}
-
-.ptb10{padding: 10px 0}
-.ptb15{padding: 15px 0}
-.ptb20{padding: 20px 0}
-
-
-.plr4{padding: 0 4px}
-.plr10{padding: 0 10px}
-.plr15{padding: 0 15px}
-.plr20{padding: 0 20px}
-
-.pAll10{padding:10px}
-.pAll15{padding:15px}
-.pAll20{padding:20px}
-
-
-.ml10{margin-left: 10px}
-.ml15{margin-left: 15px}
-.ml20{margin-left: 20px}
-.mr10{margin-right: 10px}
-.mr15{margin-right: 15px}
-.mr20{margin-right: 20px}
-.mb10{margin-bottom: 10px}
-.mb15{margin-bottom: 15px}
-.mb20{margin-bottom: 20px}
-.mt10{margin-top: 10px}
-.mt15{margin-top: 15px}
-.mt20{margin-top: 20px}
-
-.mtb8{margin: 8px 0}
-.mtb10{margin: 10px 0}
-.mtb15{margin: 15px 0}
-.mtb20{margin: 20px 0}
-.mlr10{margin: 0 10px}
-.mlr15{margin: 0 15px}
-.mlr20{margin: 0 20px}
-
-
-
-.mAll10{margin:10px}
-.mAll15{margin:15px}
-.mAll20{margin:20px}
-
-
-
-
-/* 按钮样式 */
-.common-btn{
-    padding: 0 4px;
-    font-size: 12px;
-    display: inline-block;
-    color: #fff;
-    text-align: center;
-    margin-top: 2px;
-    line-height: 20px;
-    border-radius: 2px;	
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both
 }
 
-/*关注按钮*/
-.concern-btn{
-    display: block;
-    margin-left: 12px;
-    height: 26px;
-    line-height: 26px;
-    width: 55px;
-    font-size: 14px;
-    text-align: center;
-    color: #36b70a;
-    border:1px solid #36b70a;
-    border-radius: 4px;
+.cssjr {
+    // -webkit-transform: translate3d(0,0,0);
+    // -moz-transform: translate3d(0,0,0);
+    // -ms-transform: translate3d(0,0,0);
+    // transform: translate3d(0,0,0);
+    // -webkit-transform-style: preserve-3d;
+    // -webkit-backface-visibility: hidden;
+    // -webkit-perspective: 1000;
 }
 
-/* 输入框样式 */
-.common-input{
-  display: block;
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-  border:none;
-  border-radius: 4px;
-  background: #fff;
-  box-sizing: border-box;
-}
+
 
 
 
