--- a/css/index.css
+++ b/css/index.css
@@ -779,17 +779,57 @@
     animation-name: sizeAnimate;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
-     animation-delay:1.2s;
-    -webkit-animation-delay:1.2s; 
+     animation-delay:1s;
+    -webkit-animation-delay:1s; 
 }
 .sizeAnimateSecond{
     -webkit-animation-name: sizeAnimateSecond;
     animation-name: sizeAnimateSecond;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out
-    animation-delay:1.5s;
-    -webkit-animation-delay:1.5s; 
+    animation-delay:1.2s;
+    -webkit-animation-delay:1.2s; 
 }
+@-webkit-keyframes shake {
+    0%{
+        -webkit-transform:translate(2px, 0);
+    }
+    25%{
+        -webkit-transform:translate(-2px, 0);
+    }
+    50%{
+        -webkit-transform:translate(0px, 0px);
+    }
+    75%{
+        -webkit-transform:translate(2px, 0);
+    }
+    100%{
+        -webkit-transform:translate(-2px, 0);
+    }
+}
+@keyframes shake {
+    0%{
+        transform:translate(2px, 0);
+    }
+    25%{
+        transform:translate(-2px, 0);
+    }
+    50%{
+        transform:translate(0px, 0);
+    }
+    75%{
+        transform:translate(2px, 0);
+    }
+    100%{
+        transform:translate(-2px, 0);
+    }
+}
+.shake{
+  -webkit-animation:shake 0.1s infinite;
+    animation:shake 0.1s infinite;
+}
+
+
 
 @keyframes sizeAnimateSecond{
     0%,
@@ -866,16 +906,26 @@
         transform: none
     }
 }
-
+.J_car{
+	 /*-webkit-transform: translate3d(1500px, 0, 0);
+	 transform: translate3d(1500px, 0, 0)*/
+}
 .carAnimate{
-    -webkit-animation-name: carAnimate;
+    /*-webkit-animation-name: carAnimate;
     animation-name: carAnimate;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out
      -webkit-animation-duration: 2s;
     animation-duration: 2s;
+      animation-delay:2s;
+    -webkit-animation-delay:2s; 
     -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+    animation-fill-mode: both;*/
+   -webkit-transform: translate3d(300px, 0, 0);
+     -webkit-animation: carAnimate 2s 1s ease-in-out infinite;
+    animation: carAnimate 2s 1s ease-in-out infinite;
+    /*transition: all 2s ease-out;
+    transform: translate3d(0, 0, 0)*/
 }
 @keyframes carAnimate{
     0%,
@@ -888,9 +938,9 @@
     }
     0% {
         opacity: 0;
-        -webkit-transform: translate3d(1500px, 0, 0);
-        -ms-transform: translate3d(1500px, 0, 0);
-        transform: translate3d(1500px, 0, 0)
+        -webkit-transform: translate3d(300px, 0, 0);
+        -ms-transform: translate3d(300px, 0, 0);
+        transform: translate3d(300px, 0, 0)
     }
     100% {
         -webkit-transform: none;
@@ -904,8 +954,8 @@
     -webkit-animation-delay:.6s; 
 }
 .adimatedTime2{
-	 animation-delay:1.2s;
-    -webkit-animation-delay:1.2s; 
+	 animation-delay:2s;
+    -webkit-animation-delay:2s; 
 }
 
 .wingFly{
@@ -955,11 +1005,12 @@
 
 
 .flyAnimation{
-    -webkit-animation: flyAnimation 1.6s 0s ease-in-out;
-    animation: flyAnimation 1.6s 0s ease-in-out;
+    -webkit-animation: flyAnimation .8s 0s ease-in-out  infinite;
+    animation: flyAnimation .8s 0s ease-in-out infinite;
+     animation-direction: alternate;
 }
 
-@keyframes flyAnimation{
+/*@keyframes flyAnimation{
 
     0% {
         opacity: 0;
@@ -980,16 +1031,29 @@
         transform: rotate(0deg);
         transform: none
     }
-}
+}*/
 
+@keyframes flyAnimation{
+
+    0% {
+        opacity: 0;
+        transform:rotate(30deg);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none
+    }
+}
 
 .flyAnimationRight{
-    -webkit-animation: flyAnimationRight 1.6s 0s ease-in-out forwards;
-    animation: flyAnimationRight 1.6s 0s ease-in-out forwards;
+    -webkit-animation: flyAnimationRight .8s 0s ease-in-out  infinite;
+    animation: flyAnimationRight .8s 0s ease-in-out infinite;
+    animation-direction: alternate;
 
 }
 
-@keyframes flyAnimationRight{
+/*@keyframes flyAnimationRight{
 
     0% {
         opacity: 0;
@@ -1009,6 +1073,30 @@
         opacity: 1;
         -webkit-transform: none;
         transform: rotate(-30deg);
+        transform: none
+    }
+}*/
+
+
+@keyframes flyAnimationRight{
+
+    0% {
+        opacity: 0;
+        transform:rotate(-30deg);
+    }
+/* /* /* /* /*
+    40%{
+        opacity: 1;
+        transform:rotate(0deg);
+    }
+
+     60%{
+        opacity: 0;
+        transform:rotate(-30deg);
+    }*/
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
         transform: none
     }
 }
